crates/ui-macros/tests/compile-fail/multiple_entry_points.rs
use poly_ui_macros::connected;

#[connected(entry_point, entry_point)]
fn HomeRoute() {}
