crates/ui-macros/tests/compile-fail/multiple_entry_points.stderr
error: `entry_point` may appear at most once per variant
 --> tests/compile-fail/multiple_entry_points.rs:3:1
  |
3 | #[connected(entry_point, entry_point)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `connected` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/multiple_entry_points.rs:4:18
  |
4 | fn HomeRoute() {}
  |                  ^ consider adding a `main` function to `$DIR/tests/compile-fail/multiple_entry_points.rs`
